# aawireless

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake_modules/: Findlibbluetooth.cmake
proto/: AVChannelData.proto  AVChannelMessageIdsEnum.proto  AVChannelSetupRequestMessage.proto  AVChannelSetupResponseMessage.proto  AVChannelSetupStatusEnum.proto  AVChannelStartIndicationMessage.proto  AVChannelStopIndicationMessage.proto  AVInputChannelData.proto  AVInputOpenRequestMessage.proto  AVInputOpenResponseMessage.proto  AVMediaAckIndicationMessage.proto  AVStreamTypeEnum.proto  AbsoluteInputEventData.proto  AbsoluteInputEventsData.proto  AccelData.proto  AudioConfigData.proto  AudioFocusRequestMessage.proto  AudioFocusResponseMessage.proto  AudioFocusStateEnum.proto  AudioFocusTypeEnum.proto  AudioTypeEnum.proto  AuthCompleteIndicationMessage.proto  BindingRequestMessage.proto  BindingResponseMessage.proto  BluetoothChannelData.proto  BluetoothChannelMessageIdsEnum.proto  BluetoothPairingMethodEnum.proto  BluetoothPairingRequestMessage.proto  BluetoothPairingResponseMessage.proto  BluetoothPairingStatusEnum.proto  ButtonCodeEnum.proto  ButtonEventData.proto  ButtonEventsData.proto  ChannelDescriptorData.proto  ChannelOpenRequestMessage.proto  ChannelOpenResponseMessage.proto  CompassData.proto  ControlMessageIdsEnum.proto  DiagnosticsData.proto  DoorData.proto  (+61 more)
src/: main.cpp
src/aawireless/: App.cpp  App.h
src/aawireless/bluetooth/: BluetoothService.cpp  BluetoothService.h  BluetoothSocket.cpp  BluetoothSocket.h  HFPProxyProfile.cpp  HFPProxyProfile.h  HFPProxyService.cpp  HFPProxyService.h  qprivatelinearbuffer_p.h
src/aawireless/configuration/: Configuration.cpp  Configuration.h
src/aawireless/connection/: Connection.cpp  Connection.h  ConnectionFactory.cpp  ConnectionFactory.h
src/aawireless/database/: Database.cpp  Database.h
src/aawireless/log/: Log.h
src/aawireless/wifi/: WifiHotspot.cpp  WifiHotspot.h
